(homepage-redesign): fixed padding and spacing on articles (#13)
* (homepage-redesign): fixed padding and spacing on articles

* (homepage): updated to logical css properties

--- a/src/components/home/articles/home-articles.css
+++ b/src/components/home/articles/home-articles.css
@@ -1,7 +1,7 @@
 :where(.p-articles) {
 	--articles-size: max(1 * var(--article-size) + 0 * var(--article-gap));
 	--article-size: 75--step;
-	--article-gap: 5--step;
+	--article-gap: 15--step;
 
 	display: grid;
 	grid-template-rows: auto auto;
@@ -9,6 +9,7 @@
 	/* layout */
 	flex-flow: column;
 	max-inline-size: 100%;
+	
 
 	@media (width >= 760px) {
 		--articles-size: max(2 * var(--article-size) + 1 * var(--article-gap));
@@ -74,9 +75,9 @@
 		grid-row: 2;
 
 		/* layout */
-		inline-size: 20px;
-		block-size: 450px;
-		padding-inline: 5px;
+		inline-size: 5--step;
+		block-size: 112.5--step;
+		padding-inline: 1.25--step;
 		transition: 400ms opacity;
 
 		/* decoration */
@@ -135,9 +136,9 @@
 		flex-flow: column;
 		flex-shrink: 0;
 		inline-size: var(--article-size);
-		padding-block: 5--step;
-		padding-inline: 5--step;
 		scroll-snap-align: start;
+		padding: 0;
+	
 
 		/* decoration */
 		background-color: var(--BaseHeaderColor);
@@ -165,6 +166,7 @@
 			font-size: 20--rpx;
 			font-weight: 500;
 			line-height: max(24 / 20);
+			padding-left: 5--step;
 		}
 
 		& p {
@@ -173,7 +175,8 @@
 
 			/* typography */
 			font-size: 14--rpx;
-			line-height: max(20 / 14);
+			line-height: 4.25--step;
+			padding-inline: 5--step;
 		}
 
 		& a {
@@ -193,6 +196,8 @@
 			box-shadow: var(--InteractiveColor) 0 0 0 1px inset;
 			color: var(--InverseColor);
 			cursor: pointer;
+			margin-bottom: 4.125--step;
+			margin-inline: 20--step;
 
 			&:is(:hover, :focus-visible) {
 				background-color: var(--InteractiveHoverColor);
